Created rudimentary Game page.

--- a/frontend/src/app/SingleGame/SingleGame.module.css
+++ b/frontend/src/app/SingleGame/SingleGame.module.css
@@ -1,3 +1,89 @@
-.header {
+.singleGameContainer {
+  background-color: #1a202c;
+  color: white;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 20px;
+}
+
+.gameTitle {
+  font-size: 24px;
+  font-weight: bold;
+  margin-bottom: 20px;
+}
+
+.gameContent {
+  display: flex;
+  max-width: 900px;
+  width: 100%;
+  gap: 20px;
+}
+
+/* Left Side */
+.gameLeft {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  width: 200px;
+}
+
+.cover {
+  background-color: #2d3748;
+  width: 100%;
+  height: 250px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-weight: bold;
+  border-radius: 8px;
+}
+
+.gameInfo {
+  background-color: #2d3748;
+  padding: 10px;
   text-align: center;
+  font-weight: bold;
+  border-radius: 8px;
+}
+
+/* Right Side */
+.gameRight {
+  flex-grow: 1;
+  display: grid;
+  grid-template-columns: 2fr 1fr;
+  gap: 10px;
+}
+
+.gameSummary,
+.ratings,
+.reviews,
+.playStatus,
+.writeReview {
+  background-color: #2d3748;
+  padding: 15px;
+  font-weight: bold;
+  border-radius: 8px;
+  text-align: center;
+}
+
+.gameSummary {
+  grid-column: 1 / 2;
+}
+
+.ratings {
+  grid-column: 2 / 3;
+}
+
+.reviews {
+  grid-column: 1 / 2;
+}
+
+.playStatus {
+  grid-column: 2 / 3;
+}
+
+.writeReview {
+  grid-column: 1 / 3;
 }
