--- a/frontend/src/app/Dashboard/Dashboard.module.css
+++ b/frontend/src/app/Dashboard/Dashboard.module.css
@@ -10,6 +10,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    margin-top: 0px;
 }
 
 .navContainer {
@@ -80,6 +81,12 @@
 .featuredGames {
     padding: 50px 20px;
     text-align: center;
+}
+
+.otherGames {
+    padding: 50px 20px;
+    text-align: center;
+    margin-bottom: 0px;
 }
 
 .sectionTitle {
