added check if user is logged in on friends page

--- a/frontend/src/app/Friends/Friends.module.css
+++ b/frontend/src/app/Friends/Friends.module.css
@@ -60,3 +60,9 @@
   max-width: 200px;
   margin-bottom: 8px;
 }
+
+.title {
+  text-align: center;
+  font-family: Arial, sans-serif;
+  color: white;
+}
