--- a/frontend/src/app/Dashboard/Dashboard.module.css
+++ b/frontend/src/app/Dashboard/Dashboard.module.css
@@ -10,7 +10,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin-top: 0px;
+    margin: 0px;
 }
 
 .navContainer {
