--- a/frontend/src/app/SingleGame/[gameid]/SingleGame.module.css
+++ b/frontend/src/app/SingleGame/[gameid]/SingleGame.module.css
@@ -1,17 +1,23 @@
+
 .singleGameContainer {
   background-color: #1a202c;
   color: white;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
-  align-items: center;
+  align-items: flex-start;
+  margin-left: 22.5%;
   padding: 20px;
 }
 
 .gameTitle {
-  font-size: 24px;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 32px;
   font-weight: bold;
   margin-bottom: 20px;
+  background-color:#2d3748;
+  border-radius: 8px;
+  padding: 15px;
 }
 
 .gameContent {
@@ -51,11 +57,13 @@
 }
 
 .gameInfo {
+  font-family: Arial, Helvetica, sans-serif;
   background-color: #2d3748;
   padding: 10px;
   text-align: center;
   font-weight: bold;
   border-radius: 8px;
+  
 }
 
 /* Right Side */
@@ -71,9 +79,10 @@
 .reviews,
 .playStatus,
 .writeReview {
+  font-family: Arial, Helvetica, sans-serif;
   background-color: #2d3748;
   padding: 15px;
-  font-weight: bold;
+  font-weight: normal;
   border-radius: 8px;
   text-align: center;
 }
@@ -82,7 +91,7 @@
   grid-column: 1 / 2;
   background-color: #2d3748;
   padding: 15px;
-  font-weight: bold;
+  font-weight: normal;
   border-radius: 8px;
   text-align: center;
   word-wrap: break-word;
