--- a/frontend/src/components/GameDisplays/GameTable/GameTable.module.css
+++ b/frontend/src/components/GameDisplays/GameTable/GameTable.module.css
@@ -6,6 +6,7 @@
     border-radius: 10px;
     box-shadow: 0 2px 15px rgba(0, 0, 0, 0.1);
     overflow-x: auto;
+    width: calc(100% - 40px);
 }
 
 .gameTable {
