--- a/frontend/src/components/GameDisplays/DashGameGallery/DashGameGallery.module.css
+++ b/frontend/src/components/GameDisplays/DashGameGallery/DashGameGallery.module.css
@@ -2,43 +2,45 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    gap: 15px;
-    width: calc(100% - 40px);
-    max-width: 1700px;
-    margin: auto;
-    padding: 80px 20px;
+    margin-top: 25px;
+    padding: 80px;
 }
 
 .gameContainer {
     flex-direction: column;
-    height:auto;
+    height: fit-content;
     align-items: center;
     text-align: center;
-    min-height: 50rem;
-    min-width: 30%;
-
 }
 
 .gallery img {
+    border: 1px white solid;
+    border-radius: 10px;
     width: 70%;
     max-width: 5000px;
-    margin-bottom: 50px;
-    height: auto;
+    height: fit-content;
     aspect-ratio: 2/3;
-    object-fit: cover;
-    transition: transform 0.4s ease-in-out, filter 0.4s ease-in-out;
-    border-radius: 10px;
+    transition: transform 0.25s ease-in-out, filter 0.25s ease-in-out;
     cursor: pointer;
     position: relative;
-    box-shadow: 20px 20px 50px black;
+    box-shadow: 20px 20px 50px rgba(0, 0, 0, 0.25);
+    filter: brightness(1);
+    margin: 0%;
 }
 
-.gallery .enlarged {
-    transform: scale(1.2);
-    z-index: 1;
+.gameContainer:hover {
+    transition: transform 0.25s ease-in-out, filter 0.25s ease-in-out;
+    transform: scale(1.1);
+    filter: brightness(1.1);
 }
 
-.gameTitle {
+.gameContainer{
+    transition: transform 0.4s ease-in-out, filter 0.4s ease-in-out;
+    filter: brightness(.9);
+}
+
+
+.gameCategory {
     margin-top: 15px;
     font-size: 1.4rem;
     color: white;
