--- a/frontend/src/components/GameDisplays/GameTable/GameTable.module.css
+++ b/frontend/src/components/GameDisplays/GameTable/GameTable.module.css
@@ -1,6 +1,6 @@
 .gameTableContainer {
     max-width: 1200px;
-    margin: 50px auto 0 auto;
+    margin: 0px auto ;
     padding: 20px;
     background-color: #1e1e1e;
     border-radius: 10px;
