--- a/frontend/src/app/Home.module.css
+++ b/frontend/src/app/Home.module.css
@@ -1,15 +1,14 @@
 .container {
-    background-color: #111;
-    color: white;
-    font-family: Arial, sans-serif;
+
+
 }
 
 .header {
-    background-color: #222;
     padding: 20px;
     display: flex;
     justify-content: space-between;
     align-items: center;
+    background-color: var(--bg-light);
 }
 
 .navContainer {
@@ -45,7 +44,6 @@
 }
 
 .heroOverlay {
-    background: rgba(0, 0, 0, 0.6);
     position: absolute;
     width: 100%;
     height: 100%;
@@ -70,12 +68,16 @@
 }
 
 .exploreButton {
-    background-color: #007BFF;
+    background-color: var(--button-primary);
     color: white;
     padding: 10px 20px;
     border-radius: 5px;
     text-decoration: none;
     font-size: 18px;
+}
+
+.exploreButton:hover {
+  background-color: var(--button-secondary);
 }
 
 .featuredGames {
@@ -95,7 +97,7 @@
 }
 
 .gameCard {
-    background-color: #222;
+    background-color: var(--bg-light);
     padding: 20px;
     border-radius: 10px;
     text-align: center;
@@ -114,14 +116,12 @@
 
 .gameDescription {
     font-size: 16px;
-    color: #bbb;
+    color: var(--text-secondary);
 }
 
 .footer {
-    background-color: #222;
-    justify-content: space-between;
     text-align: center;
     padding: 20px;
     margin-top: 50px;
-    color: #bbb;
+    color: var(--text-secondary);
 }
