--- a/frontend/src/app/SingleGame/[gameid]/SingleGame.module.css
+++ b/frontend/src/app/SingleGame/[gameid]/SingleGame.module.css
@@ -1,7 +1,6 @@
 
 .singleGameContainer {
-  background-color: #1a202c;
-  color: white;
+  color: var(--text-primary);
   min-height: 100vh;
   display: flex;
   flex-direction: column;
@@ -11,11 +10,10 @@
 }
 
 .gameTitle {
-  font-family: Arial, Helvetica, sans-serif;
   font-size: 32px;
   font-weight: bold;
   margin-bottom: 20px;
-  background-color:#2d3748;
+  background-color: var(--bg-light);
   border-radius: 8px;
   padding: 15px;
 }
@@ -38,8 +36,8 @@
 }
 
 .cover {
-  background-color: #2d3748;
-  width: auto;
+  background-color: var(--bg-light);
+  width: 100%;
   min-height: 250px; /* Ensures it doesn’t collapse */
   display: flex;
   align-items: center;
@@ -57,8 +55,7 @@
 }
 
 .gameInfo {
-  font-family: Arial, Helvetica, sans-serif;
-  background-color: #2d3748;
+  background-color: var(--bg-light);
   padding: 10px;
   text-align: center;
   font-weight: bold;
@@ -79,8 +76,7 @@
 .reviews,
 .playStatus,
 .writeReview {
-  font-family: Arial, Helvetica, sans-serif;
-  background-color: #2d3748;
+  background-color: var(--bg-light);
   padding: 15px;
   font-weight: normal;
   border-radius: 8px;
@@ -89,7 +85,7 @@
 
 .gameSummary {
   grid-column: 1 / 2;
-  background-color: #2d3748;
+  background-color: var(--bg-light);
   padding: 15px;
   font-weight: normal;
   border-radius: 8px;
