--- a/frontend/src/components/GameDisplays/GameTable/GameTable.module.css
+++ b/frontend/src/components/GameDisplays/GameTable/GameTable.module.css
@@ -2,7 +2,7 @@
     max-width: 1200px;
     margin: 0 auto;
     padding: 20px;
-    background-color: #1e1e1e;
+    background-color: var(--bg-light);
     border-radius: 10px;
     box-shadow: 0 4px 20px rgba(0, 0, 0, 0.2);
     overflow-x: auto;
@@ -12,9 +12,8 @@
 .gameTable {
     width: 100%;
     border-collapse: collapse;
-    background-color: #2c2f36;
-    color: #fff;
-    font-family: 'Arial', sans-serif;
+    background-color: var(--bg-light);
+    color: var(--text-primary);
     font-size: 14px;
     border-radius: 10px;
     overflow: hidden;
@@ -27,7 +26,7 @@
 }
 
 .gameTable th {
-    background-color: #333;
+    background-color: var(--bg-content);
     font-weight: bold;
     text-transform: uppercase;
     letter-spacing: 1px;
@@ -36,16 +35,16 @@
 }
 
 .gameTable tr:nth-child(even) {
-    background-color: #3a3d44;
+  background-color: var(--bg-primary);
 }
 
 .gameTable tr:hover {
-    background-color: #565a65;
-    transition: background-color 0.3s ease;
+  background-color: var(--bg-dark);
+  transition: background-color 0.3s ease;
 }
 
 .gameTable td a {
-    color: #1e90ff;
+    color: var(--bg-accent);
     text-decoration: none;
     font-weight: bold; /* Makes title stand out */
     font-size: 16px; /* Increases size */
@@ -53,8 +52,11 @@
 }
 
 .gameTable td a:hover {
-    color: #ff6347;
-    text-decoration: underline;
+    color: var(--danger);
+}
+
+.gameTable tr {
+  border-bottom: 1px solid var(--bg-content);
 }
 
 /* Adjust title column for prominence */
@@ -72,10 +74,8 @@
 
 /* Header row contrast */
 .headerRow {
-    background-color: #292b2f;
-    font-size: 16px;
-    padding: 20px;
-    
+  background-color: var(--bg-dark);
+  color: var(--text-primary);
 }
 
 /* Ensure word wrapping for long titles */
@@ -95,3 +95,4 @@
     width: 15%;
     height: 15%;
 }
+
