--- a/frontend/src/components/GameDisplays/DashGameGallery/DashGameGallery.module.css
+++ b/frontend/src/components/GameDisplays/DashGameGallery/DashGameGallery.module.css
@@ -2,61 +2,60 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-top: 25px;
     padding: 80px;
     color: #E0E0E0;
     font-family: Arial, sans-serif;
 }
-
+    
 .gameContainer {
+    border: rgba(255,255,255,0.3) .5px solid;
     flex-direction: column;
-    height: fit-content;
-    align-items: center;
     text-align: center;
     background-color: rgba(45, 45, 45, 0.8);
     border-radius: 8px;
     margin: 20px;
+    margin-bottom: 0;
     padding: 20px;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.6);
-}
-
+    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.5);
+    transition: transform 0.3s ease-in-out, filter 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
+    filter: brightness(0.9);
+    position: relative;
+    }
+    
+    .gameContainer:nth-child(even) {
+    background-color: rgba(72, 72, 72, 0.6);
+    transform: scale(1.05);
+    }
+    
+    .gameContainer:hover {
+    transform: scale(1.075) translateY(-5px);
+    filter: brightness(1.03);
+    box-shadow: 0 15px 30px rgba(0, 0, 0, 0.7), 0 0 15px rgba(98, 153, 240, 0.3);
+    animation: subtleRotate 0.5s ease-in-out;
+    }
+    
 .gallery img {
-    border: 1px white solid;
+    border: 1px solid white;
     border-radius: 10px;
     width: 70%;
-    height: fit-content;
     aspect-ratio: 2/3;
     transition: transform 0.25s ease-in-out, filter 0.25s ease-in-out;
+    transition: scale 0.25s ease-in-out, filter 0.25s ease-in-out;
     cursor: pointer;
-    position: relative;
     box-shadow: 20px 20px 50px rgba(0, 0, 0, 0.25);
     filter: brightness(1);
-    margin: 0%;
 }
-
-
-.gameContainer:hover {
-    transition: transform 0.25s ease-in-out, filter 0.25s ease-in-out;
-    transform: scale(1.1);
-    filter: brightness(1.05);
-}
-
-.gameContainer{
-    transition: transform 0.4s ease-in-out, filter 0.4s ease-in-out;
-    filter: brightness(.9);
-}
+    
 .gameContainer img:hover {
     outline: 1px solid #6299f0;
     filter: brightness(1.1);
+    scale: 1.025;
+    transition: scale 0.25s ease-in-out, filter 0.25s ease-in-out;
 }
-
+    
 .gameCategory {
-    margin-top: 15px;
+    margin-top: 5px;
     font-size: 1.4rem;
     color: white;
     font-weight: bold;
-    z-index: 3;
-    position: relative;
 }
-
-  
