--- a/frontend/src/components/GameDisplays/GameTable/GameTable.module.css
+++ b/frontend/src/components/GameDisplays/GameTable/GameTable.module.css
@@ -26,7 +26,7 @@
 }
 
 .gameTable th {
-    background-color: var(--bg-content);
+    background-color: var(--bg-dark);
     font-weight: bold;
     text-transform: uppercase;
     letter-spacing: 1px;
