--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -1,25 +1,23 @@
 :root {
-  --bg-primary: #eaf2fc; /* Light mode background with a hint of blue */
+  --bg-primary: #eaf2fc;
   --bg-light: #ffffff;
   --bg-dark: #c8d9f0;
   --bg-content: #3a4f6e;
-  --text-primary: #1e2837; /* Dark text for contrast */
+  --text-primary: #1e2837; 
   --text-secondary: #4b5c77;
   --button-primary: #d0e0f7;
   --button-secondary: #b5cdee;
   --bg-accent: #2d88f0;
   --bg-accent-secondary: #0f76eb;
   --danger: #d9534f;
-
-
 }
 
 .dark {
-  --bg-primary: #1e2837; /* Dark mode background */
+  --bg-primary: #1e2837;
   --bg-light: #304058;
   --bg-dark: #0c1016;
   --bg-content: #91a5c3;
-  --text-primary: #ffffff; /* Dark mode text */
+  --text-primary: #ffffff; 
   --text-secondary: #bbbbbb;
   --button-primary: #202b3e;
   --button-secondary: #273d61;
