--- a/frontend/src/components/GameDisplays/GameTable/GameTable.module.css
+++ b/frontend/src/components/GameDisplays/GameTable/GameTable.module.css
@@ -32,6 +32,7 @@
     text-transform: uppercase;
     letter-spacing: 1px;
     font-size: 16px;
+    text-align: center;
 }
 
 .gameTable tr:nth-child(even) {
@@ -60,6 +61,7 @@
 .gameTable td:first-child {
     font-size: 16px;
     font-weight: bold;
+    text-align: Left;
 }
 
 /* Improve checkbox alignment */
@@ -73,16 +75,23 @@
     background-color: #292b2f;
     font-size: 16px;
     padding: 20px;
+    
 }
 
 /* Ensure word wrapping for long titles */
 .gameTable td {
     word-wrap: break-word;
     max-width: 250px;
+    text-align: center;
 }
 
 /* Reduce column width for checkboxes */
 .gameTable td:last-child {
     text-align: center;
     width: 50px;
+}
+
+.steamImg {
+    width: 15%;
+    height: 15%;
 }
