--- a/frontend/src/components/Button/Button.module.css
+++ b/frontend/src/components/Button/Button.module.css
@@ -2,13 +2,13 @@
   width: 50px;
   height: 50px;
   border-radius: 50%;
-  background-color: rgb(20, 20, 20);
+  background-color: var(--bg-light);
   border: none;
   font-weight: 600;
   display: flex;
   align-items: center;
   justify-content: center;
-  box-shadow: 0px 0px 0px 4px rgba(180, 160, 255, 0.253);
+  box-shadow: 0px 0px 0px 4px var(--bg-accent);
   cursor: pointer;
   transition-duration: 0.3s;
   overflow: hidden;
@@ -16,6 +16,7 @@
   bottom: 20px;
   right: 30px;
   z-index: 99;
+  color: black;
 }
 
 .button-container {
@@ -30,14 +31,14 @@
 }
 
 .svgIcon path {
-  fill: white;
+  fill: var(--text-bw);
 }
 
 .button:hover {
   width: 140px;
   border-radius: 50px;
   transition-duration: 0.3s;
-  background-color: rgb(181, 160, 255);
+  background-color: var(--bg-accent);
   align-items: center;
 }
 
