--- a/frontend/src/components/Navbar/Navbar.module.css
+++ b/frontend/src/components/Navbar/Navbar.module.css
@@ -12,6 +12,7 @@
 }
 .nav_options {
   display: flex;
+  align-items: center;
   gap: 16px;
 }
 
@@ -28,7 +29,6 @@
   height: 30px; /* Adjust based on design */
   line-height: 1;
 }
-
 
 .logo:hover, .links:hover {
   background-color: var(--bg-primary);
@@ -54,10 +54,9 @@
 .searchbar {
   background-color: white;
   border-radius: 8px;
-  padding: 8px;
+  padding: 12px;
   display: flex;
   align-items: center;
-  height: 40px;
   border: 1px solid black;
 }
 
@@ -68,10 +67,12 @@
   margin-right: 10px;
   border: 2px solid white;
 }
+
 .pfp:hover {
-  border: 2px solid #6299f0;
+  border: 2px solid var(--bg-accent);
   cursor: pointer;
 }
+
 .input {
   border: none;
   width: 300px;
